package packageObserver;

public enum Continent {
    AMERICA,
    EUROPE,
    ASIA,
    AFRICA,
    OCEANIA
}
