@startuml

package PackageCommand {
    class ATM {
        - command: Command

        + setCommand(command: Command)
        + execute()
        + showAllTransactions(): void
    }

    interface   Command {
        + execute(): void
    }

    class    WithdrawCommand {
        - account: Account
        - amount: Amount
        - feeStrategy: FeeStrategy

        + execute(): void
    }

    class    TransferCommand {
        - fromAccount: Account
        - toAccount: Account
        - amount: Amount
        - feeStrategy: FeeStrategy

        + execute(): void
    }

    class    DepositCommand {
        - account: Account
        - amount: Amount

        + execute(): void
    }

    class    BalanceCommand {
        - account: Account

        + execute(): void
    }

    Command <|.. WithdrawCommand
    Command <|.. DepositCommand
    Command <|.. TransferCommand
    Command <|.. BalanceCommand

}

package PackageStrategy {

    interface   FeeStrategy {
        + calculateFee(continent: Continent): double
    }

    class    StandardFeeStrategy {
        + calculateFee(continente: Continent): double
    }

    class    PremiumFeeStrategy {
        + calculateFee(continente: Continent): double
    }

    FeeStrategy <|.. StandardFeeStrategy
    FeeStrategy <|.. PremiumFeeStrategy
}

package PackageObserver {

    interface  Subject {
        + addObserver(observer: Observer): void
        + removeObserver(observer: Observer): void
        + notifyObservers(): void
    }

    class Account {
        - username: String
        - password: String
        - attemptsFailed: int
        - balance: double
        - transactions: ArrayList<>
        - observers: List<Observer>
        - continent: Continent

        + login(): boolean
        + deposit(amount: double)
        + withdraw(amount: double)
        + transfer(amount: double, targetAccount: Account)
        + getBalance(): double
        + showInfo(): void
        + showCommands(): void
    }

    interface    Observer {
        + update(subject: Subject): void
    }

    class    AuditObserver {
        + update(subject: Subject): void
    }

    class    NotificationObserver {
        + update(subject: Subject): void
    }

    Observer <|.. AuditObserver
    Observer <|.. NotificationObserver
}

enum Continent {
    AMERICA
    EUROPE
    ASIA
    AFRICA
    OCEANIA
}

interface Transaction {
    + validation(): boolean
}

Continent --o Account
Transaction <|-- WithdrawCommand
Transaction <|-- DepositCommand
Transaction <|-- TransferCommand

ATM o-- Command

WithdrawCommand o-- FeeStrategy
TransferCommand o-- FeeStrategy

Account o-- Observer
Subject <|-- Account

Account -- ATM

@enduml
